--- a/src/tags-input.css
+++ b/src/tags-input.css
@@ -1,6 +1,6 @@
 /* select-items-box base styles */
 
-.token-input-container {
+.tags-input {
     /*position: relative;
     z-index: 1;*/
     overflow: hidden;
@@ -11,15 +11,15 @@
     -moz-border-radius: 3px;
 }
 
-.token-input-container .token a:hover{
+.tags-input .token a:hover{
     color: rgba(21, 15, 22, 0.82);
 }
 
-.token-input-container .token:focus {
+.tags-input .token:focus {
     outline: none;
 }
 
-.token-input-container .token-item {
+.tags-input .token-item {
     display: inline-block;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -27,7 +27,7 @@
     user-select: none;
 }
 
-.token-input-container .token {
+.tags-input .token {
     /* background: none; */
     display: inline-block;
     vertical-align: baseline;
@@ -43,7 +43,7 @@
 
 }
 
-.token-input-container input {
+.tags-input input {
 
     display: inline-block;
     width: 4px;
@@ -102,23 +102,22 @@
     -moz-box-shadow: none;
 }
 
-.token-input-container .token.selected {
+.tags-input .token.selected {
     opacity: .7;
-
 }
 
-.token-input-container .remove-token:hover {
+.tags-input .remove-token:hover {
     text-decoration: none;
     background: rgba(0, 0, 0, 0.05);
     color: #fff;
 
 }
 
-.token-input-container .token-template {
+.tags-input .token-template {
     display: inline-block;
 }
 
-.token-input-container .token-remove {
+.tags-input .token-remove {
     display: inline-block;
     width: 17px;
     font-weight: bold;
@@ -132,10 +131,9 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     color: #999;
-
 }
 
-.token-input-container .loading {
+.tags-input .loading {
     -moz-transition: opacity 0.2s;
     -webkit-transition: opacity 0.2s;
     transition: opacity 0.2s;
@@ -157,6 +155,22 @@
     color: #EFD100;
 }
 
+/* disabled state */
+.tags-input.disable-all {
+    background-color: #fcfcfc;
+}
+.tags-input.disable-all .typeahead-box {
+    border: 1px solid #f0f0f0;
+}
+
+.tags-input.disable-all .token {
+    background-color: #ebebeb;
+}
+.tags-input.disable-all .token a:hover {
+    color: #999;
+}
+
+/* ----- */
 .select-dropdown {
     position: absolute;
     z-index: 10;
